--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Boombox | Your one stop spot for music!</title>
+    <title>Music-Box | Your one stop spot for music!</title>
     <meta name="description" content="Play, record & cherish the music.">
     <meta name="author" content="Akhil Goyal">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
 
                 <div class="navbar">
                     <div class="container grid-mobile flex">
-                        <a class="logo md-text"><i class="fas fa-drum drum md-text"></i>Boombox</a>
+                        <a class="logo md-text"><i class="fas fa-drum drum md-text"></i>Music-Box</a>
                         <nav>
                             <ul class="grid-mobile-3">
                                 <li><a href="#section-our-services">Our Services</a></li>
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="container hero-text">
-                    <h1>Boombox</h1>
+                    <h1>Music-Box</h1>
                     <h5>Your one stop spot for music.</h5>
                 </div>
             </section>
@@ -294,7 +294,7 @@
     </main>
 
     <footer>
-        <h4>Copyright &copy; 2020 | All rights reserved.</h4>
+        <h4>Copyright &copy; 2022 | Amrita Chauhan.</h4>
     </footer>
 
     <!-- Fixed Music Playbar -->
